<resources>
    <string name="app_name">JÖLT</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="app_title">JÖLT</string>
    <string name="cont">CONTINUE</string>
    <string name="vibrate">VIBRATE</string>
    <string name="account">Account</string>
    <string name="calendar">Calendar</string>
    <string name="rewards">Rewards</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="welcome_to">Welcome to…</string>
    <string name="connect">Connect to Device</string>
    <string name="monitor">Start Monitoring</string>
    <string name="welcome_instruction">Please connect your bluetooth device</string>
    <string name="err_message_no_bt">Your device is not compatible with this app</string>
    <string name="colon_separator">:</string>
    <string name="secondsEdit_hint">SS</string>
    <string name="minutesEdit_hint">MM</string>
    <string name="hoursEdit_hint">HH</string>
    <string name="timer_done">Timer is done!</string>
    <string name="cancel_monitor">Cancel Monitoring</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="set_a_time">Set a Time</string>
    <string name="set_time">Set Time</string>
    <string name="click_here">Click Here</string>
    <string name="time_tester">Time Tester</string>
    <string name="schedule_a_job" />
    <string name="set_alarm" />
    <string name="start_alarm">Start_alarm</string>
    <string name="stop_alarm">Stop alarm</string>
    <string name="did_you_set_the_alarm">Did you set the alarm?</string>
    <string name="stop_time">Stop</string>
    <string name="bt_already_enabled">Your bluetooth adapter is already enabled</string>
    <string name="start_points">0</string>
    <string name="notification" />
    <string name="notification1">Notification1</string>
    <string name="notification2">notification2</string>
    <string name="sa">Sa</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="th">Th</string>
    <string name="f">F</string>
    <string name="su">Su</string>
    <string name="scheduletitle">ScheduleTitle</string>
    <string name="alarm_set_for">Alarm Set For</string>
    <string name="switchlist">switchList</string>
    <string name="monitor_history">Monitor History</string>
    <string name="session_1">Session 1</string>
    <string name="_04_28_20_t_08_45_00">04-28-20/08:45:00</string>
    <string name="points_200">Points: 200</string>
    <string name="_04_28_20_t_11_45_00">time</string>
    <string name="session_2">Session 2</string>
    <string name="time1">05/01/2020-11:45:00</string>
    <string name="time2">Date: 05/03/2020-09:20</string>
    <string name="points_350">Points: 350</string>
    <string name="session">Session 3</string>
    <string name="session3">Session 3</string>
    <string name="time3">Date: 2020/05/02-11:42</string>
    <string name="points3">Points: 320</string>
    <string name="session4">Session 4</string>
    <string name="time4">Date: 05/01/2020-12:30</string>
    <string name="points4">Points: 420</string>
    <string name="session5">Session 5</string>
    <string name="time5">Date: 04/30/2020-12:00</string>
    <string name="points5">Points: 250</string>
    <string name="alertMessage">Please turn your phone screen off and wait for monitoring to finish.</string>
</resources>
