<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/calendar"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/calendar" />
    <item
        android:id="@+id/rewards"
        android:icon="@android:drawable/btn_star"
        android:title="@string/rewards" />
    <item
        android:id="@+id/home"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/home" />
    <item
        android:id="@+id/schedule"
        android:icon="@android:drawable/ic_lock_idle_alarm"
        android:title="@string/schedule" />
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/action_settings" />
</menu>