<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TimePicker
        android:id="@+id/tp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_a_job"
        android:timePickerMode="spinner"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/update_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/did_you_set_the_alarm"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.539"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.427" />

        <Button
            android:id="@+id/start_alarm"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="16dp"
            android:text="Start alarm"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/update_text"
            app:layout_constraintEnd_toStartOf="@+id/stop_alarm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/stop_alarm"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="32dp"
            android:text="@string/stop_alarm"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/update_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_alarm"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/mondayBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:text="@string/m"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tuesdayBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tuesdayBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/t"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/wednesdayBtn"
            app:layout_constraintStart_toEndOf="@+id/mondayBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/wednesdayBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/w"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/thursdayBtn"
            app:layout_constraintStart_toEndOf="@+id/tuesdayBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/thursdayBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/th"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fridayBtn"
            app:layout_constraintStart_toEndOf="@+id/wednesdayBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fridayBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/f"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saturdayBtn"
            app:layout_constraintStart_toEndOf="@+id/thursdayBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saturdayBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/sa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sundayBtn"
            app:layout_constraintStart_toEndOf="@+id/fridayBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sundayBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:text="@string/su"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/saturdayBtn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>