<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="551dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Most Recent Session"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/date1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/points1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_color"
                android:text="" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Past Sessions"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time2"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/points2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_200"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_color"
                android:text="" />

            <TextView
                android:id="@+id/date3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time3"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/points3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points3"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_color"
                android:text="" />

            <TextView
                android:id="@+id/date4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time4"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/points4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points4"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_color"
                android:text="" />

            <TextView
                android:id="@+id/date5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time5"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/points5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points5"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>